{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 224,
  "lineage": "2e94ad7d-ed84-c50d-321a-420836ac4822",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-048a454009b730c5c",
            "arn": "arn:aws:ec2:us-east-1:117041486432:instance/i-0c67253d7af64e552",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c67253d7af64e552",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ec2demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d2ee2c9ef30e2fea"
              }
            ],
            "primary_network_interface_id": "eni-0d2ee2c9ef30e2fea",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-44-204-129-46.compute-1.amazonaws.com",
            "public_ip": "44.204.129.46",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ab2f4157d99405c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07641c9be7f286f2e",
            "tags": {
              "Name": "Storesense AI-EC2"
            },
            "tags_all": {
              "Name": "Storesense AI-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf5509ef0ec427fc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "117041486432",
            "id": "i-0c67253d7af64e552",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.public_subnet",
            "aws_vpc.Storesense-vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117041486432:internet-gateway/igw-0c3e1160f4f30c2c1",
            "id": "igw-0c3e1160f4f30c2c1",
            "owner_id": "117041486432",
            "region": "us-east-1",
            "tags": {
              "Name": "Storesense AI-IGW"
            },
            "tags_all": {
              "Name": "Storesense AI-IGW"
            },
            "vpc_id": "vpc-06201f6a13bbaa5c6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "117041486432",
            "id": "igw-0c3e1160f4f30c2c1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Storesense-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c3e1160f4f30c2c1",
            "id": "r-rtb-02af83559a46f18851080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02af83559a46f1885",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "117041486432",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-02af83559a46f1885"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.Storesense-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117041486432:route-table/rtb-02af83559a46f1885",
            "id": "rtb-02af83559a46f1885",
            "owner_id": "117041486432",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "Storesense AI-rt"
            },
            "tags_all": {
              "Name": "Storesense AI-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06201f6a13bbaa5c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "117041486432",
            "id": "rtb-02af83559a46f1885",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Storesense-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040d2e78af27be660",
            "region": "us-east-1",
            "route_table_id": "rtb-02af83559a46f1885",
            "subnet_id": "subnet-07641c9be7f286f2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "117041486432",
            "id": "rtbassoc-040d2e78af27be660",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.Storesense-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117041486432:security-group/sg-0bf5509ef0ec427fc",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf5509ef0ec427fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "backend",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "frontend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "Storesense AI-SG",
            "name_prefix": "",
            "owner_id": "117041486432",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Storesense AI-SG"
            },
            "tags_all": {
              "Name": "Storesense AI-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06201f6a13bbaa5c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "117041486432",
            "id": "sg-0bf5509ef0ec427fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Storesense-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117041486432:subnet/subnet-07641c9be7f286f2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07641c9be7f286f2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "117041486432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Storesense AI-Public Subnet"
            },
            "tags_all": {
              "Name": "Storesense AI-Public Subnet"
            },
            "vpc_id": "vpc-06201f6a13bbaa5c6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "117041486432",
            "id": "subnet-07641c9be7f286f2e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Storesense-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Storesense-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:117041486432:vpc/vpc-06201f6a13bbaa5c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01cf922cee7d25468",
            "default_route_table_id": "rtb-0e287df9bbbd32cd0",
            "default_security_group_id": "sg-0a2495d5c9d24026e",
            "dhcp_options_id": "dopt-09ad51eaafea64da0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06201f6a13bbaa5c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e287df9bbbd32cd0",
            "owner_id": "117041486432",
            "region": "us-east-1",
            "tags": {
              "Name": "Storesense AI-VPC"
            },
            "tags_all": {
              "Name": "Storesense AI-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "117041486432",
            "id": "vpc-06201f6a13bbaa5c6",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}